# openhavn

./: Cargo.toml  LICENSE  NOTICE  README.md
.github/workflows/: ci.yml  release.yml
crates/openhavn-cli/: Cargo.toml
crates/openhavn-cli/src/: cli.rs  main.rs  render.rs  treedata.rs
crates/openhavn-cli/src/commands/: budget.rs  init.rs  mcp.rs  mod.rs  receipts.rs  run.rs  watch.rs
crates/openhavn-cli/src/commands/mcp/: config.rs  equipment.rs  gate.rs  lock.rs  mod.rs  server.rs  targets.rs
crates/openhavn-cli/src/commands/skill/: equipment.rs  frontmatter.rs  gate.rs  lock.rs  mod.rs  source.rs  targets.rs
crates/openhavn-cli/tests/: smoke_test.rs
crates/openhavn-receipts/: Cargo.toml
crates/openhavn-receipts/src/: id.rs  lib.rs  log.rs  model.rs  validate.rs
crates/openhavn-receipts/tests/: fixtures_test.rs  model_test.rs  roundtrip_test.rs  validate_synthetic_test.rs
crates/openhavn-receipts/tests/fixtures/: over-budget.jsonl  valid.jsonl
docs/: design.md
