# SPDX-License-Identifier: Apache-2.0
[package]
name = "openhavn-cli"
description = "OpenHavn — the Agent Harbor: fleet receipts, budget composition, distillation gates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "openhavn"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
openhavn-receipts.workspace = true
serde.workspace = true
serde_json.workspace = true
rmcp = { workspace = true, features = ["transport-io"] }
tokio.workspace = true
toml.workspace = true
chrono.workspace = true
sha2.workspace = true
