# SPDX-License-Identifier: Apache-2.0
[package]
name = "openhavn-receipts"
description = "OCF lifecycle receipts (spawn/return), budget composition, and validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
